--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@clr/angular": "^0.11.4",
+    "@clr/icons": "^0.11.4",
+    "@clr/ui": "^0.11.4",
+    "@webcomponents/custom-elements": "^1.0.0",
     "core-js": "^2.4.1",
+    "moment-timezone": "^0.5.14",
+    "normalize.css": "^7.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
